--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,7 @@
 \usepackage{float}
 \usepackage[titletoc]{appendix}
 \usepackage{etoolbox}
+\usepackage{multirow}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
