--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@
 \usepackage[titletoc]{appendix}
 \usepackage{etoolbox}
 \usepackage{multirow}
+\usepackage{placeins}
 \newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
